# streaming_analytics_demo

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  demo_config.yaml  pyproject.toml
analytics/: dbt_project.yml
analytics/macros/materializations/: clickhouse_materialized_view.sql
analytics/models/marts/trading/: _trading__models.yml  vwap_5_minute.sql  vwap_5_minute_mv.sql
analytics/models/staging/coinbase/: _coinbase__models.yml  _coinbase__sources.yml  stf_coinbase__sources.yml  stg_coinbase__trades.sql  stg_coinbase__trades_mv.sql
analytics/models/utilities/: _utility_models.yml  minutes.sql
analytics/tests/: test_vwap.sql
observability/: datasource.yaml
sql/: ingestion_monitoring.sql  ingestion_monitoring_view.sql  vwap_calculation.sql
streaming_analytics_demo/: LICENSE  __init__.py  config.schema.yaml  listen.py
streaming_analytics_demo/sinks/: __init__.py  clickhouse_sink.py  file_sink.py  sink.py
streaming_analytics_demo/sources/: __init__.py  coinbase_source.py  config.schema.yaml  source.py
streaming_analytics_demo/util/: __init__.py  logging_config.py
tests/: __init__.py  test_config.py  test_listen.py
tests/fixtures/: config_invalid_type.yml  config_missing_reqd_fields.yml  valid_clickhouse_config.yml  valid_config.yml
tests/sinks/: test_clickhouse_sink.py  test_file_sink.py  test_sink.py
tests/sources/: test_coinbase_source.py
